// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Localizations files helpers returns string as utf-16 .lproj buffer 1`] = `
"\\"Terms of Service\\" = \\"Условия использования\\";
\\"Privacy Policy\\" = \\"Политика конфиденциальности\\";
\\"Legal Notices\\" = \\"Юридические уведомления\\";
\\"Unable to load webpage.\\" = \\"Не удалось загрузить веб-страницу.\\";
\\"OK\\" = \\"ОК\\";
\\"Do you want to add the token named “%@”?\\" = \\"Добавить токен \\"%@\\"?\\";
\\"No\\" = \\"Нет\\";
\\"Yes\\" = \\"Да\\";
\\"Invalid Key\\" = \\"Недействительный ключ\\";
\\"The key '%@' is invalid.\\" = \\"Ключ \\"%@\\" недействителен.\\";
\\"You must enter a key.\\" = \\"Необходимо ввести ключ.\\";
\\"Try Again\\" = \\"Повторить попытку\\";
\\"Cancel\\" = \\"Отмена\\";
\\"Invalid Barcode\\" = \\"Недопустимый штрихкод\\";
\\"The barcode '%@' is not a valid authentication token barcode.\\" = \\"Штрихкод \\"%@\\" не является действительным токеном аутентификации.\\";
\\"Welcome\\" = \\"Добро пожаловать\\";
\\"Welcome_label\\" = \\"Google Authenticator обеспечивает дополнительную безопасность аккаунта с помощью сгенерированных кодов.\\\\n\\\\nЧтобы использовать Google Authenticator, необходимо добавить аккаунт, нажав:\\";
\\"Legal Information\\" = \\"Юридическая информация\\";
\\"Authenticator\\" = \\"Authenticator\\";
\\"Google Authenticator\\" = \\"Google Authenticator\\";
\\"Add Token\\" = \\"Добавить токен\\";
\\"Time Based\\" = \\"По времени\\";
\\"Counter Based\\" = \\"По счетчику\\";
\\"Account:\\" = \\"Аккаунт:\\";
\\"user@example.com\\" = \\"user@example.com\\";
\\"Key:\\" = \\"Ключ:\\";
\\"Enter your key\\" = \\"Введите ключ\\";
\\"Scan Barcode\\" = \\"Сканировать штрихкод\\";
\\"Integrity Check Value\\" = \\"Integrity Check Value\\";"
`;

exports[`Localizations files helpers should read pass.strings file 1`] = `
Array [
  Array [
    "Terms of Service",
    "Условия использования",
  ],
  Array [
    "Privacy Policy",
    "Политика конфиденциальности",
  ],
  Array [
    "Legal Notices",
    "Юридические уведомления",
  ],
  Array [
    "Unable to load webpage.",
    "Не удалось загрузить веб-страницу.",
  ],
  Array [
    "OK",
    "ОК",
  ],
  Array [
    "Do you want to add the token named “%@”?",
    "Добавить токен \\"%@\\"?",
  ],
  Array [
    "No",
    "Нет",
  ],
  Array [
    "Yes",
    "Да",
  ],
  Array [
    "Invalid Key",
    "Недействительный ключ",
  ],
  Array [
    "The key '%@' is invalid.",
    "Ключ \\"%@\\" недействителен.",
  ],
  Array [
    "You must enter a key.",
    "Необходимо ввести ключ.",
  ],
  Array [
    "Try Again",
    "Повторить попытку",
  ],
  Array [
    "Cancel",
    "Отмена",
  ],
  Array [
    "Invalid Barcode",
    "Недопустимый штрихкод",
  ],
  Array [
    "The barcode '%@' is not a valid authentication token barcode.",
    "Штрихкод \\"%@\\" не является действительным токеном аутентификации.",
  ],
  Array [
    "Welcome",
    "Добро пожаловать",
  ],
  Array [
    "Welcome_label",
    "Google Authenticator обеспечивает дополнительную безопасность аккаунта с помощью сгенерированных кодов.

Чтобы использовать Google Authenticator, необходимо добавить аккаунт, нажав:",
  ],
  Array [
    "Legal Information",
    "Юридическая информация",
  ],
  Array [
    "Authenticator",
    "Authenticator",
  ],
  Array [
    "Google Authenticator",
    "Google Authenticator",
  ],
  Array [
    "Add Token",
    "Добавить токен",
  ],
  Array [
    "Time Based",
    "По времени",
  ],
  Array [
    "Counter Based",
    "По счетчику",
  ],
  Array [
    "Account:",
    "Аккаунт:",
  ],
  Array [
    "user@example.com",
    "user@example.com",
  ],
  Array [
    "Key:",
    "Ключ:",
  ],
  Array [
    "Enter your key",
    "Введите ключ",
  ],
  Array [
    "Scan Barcode",
    "Сканировать штрихкод",
  ],
  Array [
    "Integrity Check Value",
    "Integrity Check Value",
  ],
]
`;

exports[`Localizations files helpers should read pass.strings file 2`] = `
Array [
  Array [
    "Terms of Service",
    "服务条款",
  ],
  Array [
    "Privacy Policy",
    "隐私权政策",
  ],
  Array [
    "Legal Notices",
    "法律声明",
  ],
  Array [
    "Unable to load webpage.",
    "无法加载网页。",
  ],
  Array [
    "OK",
    "确定",
  ],
  Array [
    "Do you want to add the token named “%@”?",
    "您想添加名为“%@”的令牌吗？",
  ],
  Array [
    "No",
    "否",
  ],
  Array [
    "Yes",
    "是",
  ],
  Array [
    "Invalid Key",
    "密钥无效",
  ],
  Array [
    "The key '%@' is invalid.",
    "密钥“%@”无效。",
  ],
  Array [
    "You must enter a key.",
    "您必须输入一个密钥。",
  ],
  Array [
    "Try Again",
    "重试",
  ],
  Array [
    "Cancel",
    "取消",
  ],
  Array [
    "Invalid Barcode",
    "条形码无效",
  ],
  Array [
    "The barcode '%@' is not a valid authentication token barcode.",
    "条形码“%@”不是有效的身份验证令牌条形码。",
  ],
  Array [
    "Welcome",
    "欢迎",
  ],
  Array [
    "Welcome_label",
    "Google 身份验证器可以生成验证码，从而增强登录时的安全性。

要使用 Google 身份验证器，必须先添加一个帐户，方法是按：",
  ],
  Array [
    "Legal Information",
    "法律信息",
  ],
  Array [
    "Authenticator",
    "身份验证器",
  ],
  Array [
    "Google Authenticator",
    "Google 身份验证器",
  ],
  Array [
    "Add Token",
    "添加令牌",
  ],
  Array [
    "Time Based",
    "基于时间",
  ],
  Array [
    "Counter Based",
    "基于计数器",
  ],
  Array [
    "Account:",
    "帐户：",
  ],
  Array [
    "user@example.com",
    "user@example.com",
  ],
  Array [
    "Key:",
    "密钥：",
  ],
  Array [
    "Enter your key",
    "输入您的密钥",
  ],
  Array [
    "Scan Barcode",
    "扫描条形码",
  ],
  Array [
    "Integrity Check Value",
    "Integrity Check Value",
  ],
]
`;
